Rss images rendering too large in external feed block (Bug #1219499)
Some RSS/Atom feeds provide an over-large channel image/logo which
disrupts display of the External Feed block in a Mahara Page.

See e.g. this feed link from the BBC
http://downloads.bbc.co.uk/podcasts/worldservice/digitalp/rss.xml

--- a/htdocs/theme/views.css
+++ b/htdocs/theme/views.css
@@ -739,6 +739,10 @@ table.maharatable tr#instconf_otherblocksmsg_container td {
 #blocktype_externalfeed_feed .feedlogoimage {
     margin: 10px 0;
 }
+#blocktype_externalfeed_feed .feedlogoimage img {
+    max-width: 144px;
+    max-height: 400px;
+}
 #blocktype_externalfeed_desc {
     padding-bottom: 5px;
     border-bottom: 1px dotted #D1D1D1;
